--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -8,7 +8,12 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
     <script src="main.js"></script>
 </head>
+<header>
+    <h1><%=title%></h1>
+    <ul>
+        <% nav.forEach(function(nav){ %>
+            <li><a href="<%= nav.link %>"></a> <%= nav.title %></li>
+        <% }) %>
+    </ul>
+</header>
 <body>
-    <h1>Hello there</h1>
-</body>
-</html>
