started implementing registration module

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,7 +4,7 @@
         <div class="container">
 <!--Navigation Bar Code-->
             <nav class="navbar navbar-expand-sm ">
-                <a class="navbar-brand" style="opacity: 1;" href="#"><img src="images/favicon.ico"  width="200" height="200"/></a>
+                <a class="navbar-brand" style="opacity: 1;" href="/"><img src="images/favicon.ico"  width="200" height="200"/></a>
                 <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
                         aria-controls="collapsibleNavId"
                         aria-expanded="false" aria-label="Toggle navigation"><img src="images/favicon.ico" height="792"
