--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -1,5 +1,5 @@
 <% include partials/header %>
-<form method="POST" action="/register/add">
+<form method="POST" action="/users/register">
     <div class="container">
       <h1>Register</h1>
       <p>Please fill in this form to create an account.</p>
