--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -5,6 +5,12 @@
       <p>Please fill in this form to create an account.</p>
       <hr>
 
+      <% if(typeof errors != 'undefined'){ errors.forEach(err=>{ %>
+        <div>
+          <%=err.msg%>
+        </div>
+      <% })} %>
+
       <label for="name"><b>Name</b></label>
       <input type="text" placeholder="Enter Name" name="name" >
   
